<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent">
  
	<RelativeLayout android:id="@+id/rl_main_menu" 
		android:layout_height="fill_parent" android:layout_width="fill_parent">
		
		<LinearLayout android:id="@+id/ll_main_menu" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:orientation="vertical" 
			android:layout_centerHorizontal="true" 
			android:layout_centerVertical="true">
			
			<Button android:text="@string/btn_new_game" 
				android:id="@+id/btn_new_game" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
			
			<Button android:text="@string/btn_load_game" 
				android:id="@+id/btn_load_game" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
			
			<Button android:text="@string/btn_setting" 
				android:id="@+id/btn_setting" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
			
			<Button android:text="@string/btn_instruction" 
				android:id="@+id/btn_instruction" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
			
			<Button android:text="@string/btn_exit_game" 
				android:id="@+id/btn_exit_game" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Button>
		</LinearLayout>
	</RelativeLayout>
</FrameLayout>
